feat(ui): display SecretJS results in UI
Add user-facing feedback for SecretJS contract queries by showing a
Snackbar with a "View" action that opens a full response/error AlertDialog.
Also add a temporary alert in secret_bridge.html for testing (wrapped to
avoid breaking environments without alert). Improve mnemonic selection by
adding getSelectedMnemonic() which prefers the currently selected wallet from
secure prefs and falls back to the legacy KEY_MNEMONIC; runQueryViaWebView now
uses this helper. These changes surface query results to users and support
multi-wallet setups.

--- a/app/src/main/assets/secret_bridge.html
+++ b/app/src/main/assets/secret_bridge.html
@@ -73,6 +73,8 @@
     try {
       // Only use SecretJS path; proxyUrl is ignored when SecretJS used.
       const res = await runQueryWithSecretJs(contractAddress, codeHash, queryObj, lcdUrl);
+      // For testing: show SecretJS response in an alert (wrapped in try to avoid breaking environments without alert)
+      try { window.alert(JSON.stringify(res)); } catch (e) { console.warn('alert failed', e); }
       if (window.AndroidBridge && window.AndroidBridge.onQueryResult) {
         window.AndroidBridge.onQueryResult(JSON.stringify(res));
         return;
