feat(bridge): add SecretJS execute bridge and ANML claim flow
- Introduce SecretExecuteActivity (headless, NoDisplay) for signing and
  broadcasting executes via WebView/SecretJS
- Extend secret_bridge.html with runExecute (Wallet signer, fixed LCD,
  optional funds/memo) and Android callbacks for result/error
- Wire up claim buttons in ANMLClaimActivity/Fragment to invoke execute
  and refresh status; add lightweight in-app debug dialogs
- Make SecretQueryActivity headless, enable WebView debugging/DOM
  storage, console logging, and surface load errors
- Add Theme.PassportScanner.NoDisplay style for invisible activities

--- a/app/src/main/assets/secret_bridge.html
+++ b/app/src/main/assets/secret_bridge.html
@@ -73,15 +73,90 @@
     try {
       // Only use SecretJS path; proxyUrl is ignored when SecretJS used.
       const res = await runQueryWithSecretJs(contractAddress, codeHash, queryObj, lcdUrl);
-      // For testing: show SecretJS response in an alert (wrapped in try to avoid breaking environments without alert)
-      try { window.alert(JSON.stringify(res)); } catch (e) { console.warn('alert failed', e); }
+      console.log('runQuery result', res);
       if (window.AndroidBridge && window.AndroidBridge.onQueryResult) {
         window.AndroidBridge.onQueryResult(JSON.stringify(res));
         return;
       }
     } catch (err) {
+      console.error('runQuery error', err);
       if (window.AndroidBridge && window.AndroidBridge.onQueryError) {
-        window.AndroidBridge.onQueryError(String(err));
+        window.AndroidBridge.onQueryError(String(err && err.stack ? err.stack : err));
+        return;
+      }
+    }
+  }
+
+  // Signing + execute (broadcast) via SecretJS in WebView
+  async function runExecute(contractAddress, codeHash, execMsg, mnemonic, fundsString, lcdUrl, memo) {
+    try {
+      // Use fixed LCD URL per project requirement (ignore lcdUrl param)
+      const lcdFixed = 'https://lcd.erth.network';
+      const mod = await ensureSecretJsAvailable();
+      if (!mod || !mod.SecretNetworkClient || !mod.Wallet) {
+        throw new Error('SecretJS not available (need SecretNetworkClient and Wallet)');
+      }
+      const { SecretNetworkClient, Wallet, stringToCoins } = mod;
+
+      if (!mnemonic || !mnemonic.trim()) {
+        throw new Error('Missing mnemonic for signer');
+      }
+
+      // Create signer wallet and client
+      const wallet = new Wallet(mnemonic.trim());
+      const walletAddress = wallet.address;
+
+      const client = new SecretNetworkClient({
+        url: lcdFixed,
+        chainId: 'secret-4',
+        wallet,
+        walletAddress,
+      });
+
+      // Optional funds
+      let funds = [];
+      if (fundsString && fundsString.trim()) {
+        try {
+          funds = stringToCoins(fundsString.trim());
+        } catch (e) {
+          throw new Error('Invalid funds string: ' + e.message);
+        }
+      }
+
+      const msg = {
+        sender: walletAddress,
+        contract_address: contractAddress,
+        msg: execMsg,
+        funds: funds,
+      };
+      if (codeHash) {
+        msg.code_hash = codeHash;
+      }
+
+      // Execute with auto fee and optional memo
+      console.log('runExecute sending', { contractAddress, walletAddress, msg, funds });
+      const resp = await client.tx.compute.executeContract(msg, {
+        gasLimit: 500_000,
+        memo: memo || '',
+      });
+      console.log('runExecute resp', resp);
+
+      const out = {
+        success: true,
+        txhash: resp?.transactionHash || resp?.txhash || null,
+        height: resp?.height || null,
+        rawLog: resp?.rawLog || null,
+        response: resp,
+      };
+
+      if (window.AndroidBridge && window.AndroidBridge.onExecuteResult) {
+        window.AndroidBridge.onExecuteResult(JSON.stringify(out));
+        return;
+      }
+    } catch (err) {
+      console.error('runExecute error', err);
+      if (window.AndroidBridge && window.AndroidBridge.onExecuteError) {
+        window.AndroidBridge.onExecuteError(String(err && err.stack ? err.stack : err));
         return;
       }
     }
@@ -89,6 +164,7 @@
 
   // expose to global
   window.runQuery = runQuery;
+  window.runExecute = runExecute;
 })();
 </script>
 </body>
